--- a/artificial_intelligence/app/index.html
+++ b/artificial_intelligence/app/index.html
@@ -1,92 +1,289 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Chat con IA</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Chatbot Inteligente</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 2rem;
-            background: #f8f8f8;
-        }
+      :root {
+        --primary-color: #5f6cfa;
+        --secondary-color: #4a51d3;
+        --bot-color: #e0e7ff;
+        --user-color: #c3dafb;
+        --bg-color: #f2f4f8;
+        --text-color: #2c2f3a;
+        --font: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      }
 
-        #chat {
-            max-width: 600px;
-            margin: 0 auto;
-            background: white;
-            border-radius: 10px;
-            padding: 1rem;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
+      body {
+        font-family: var(--font);
+        background-color: var(--bg-color);
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        color: var(--text-color);
+      }
 
-        .mensaje {
-            margin: 10px 0;
-        }
+      .chat-container {
+        width: 100%;
+        max-width: 500px;
+        height: 85vh;
+        background-color: white;
+        border-radius: 20px;
+        box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
+      }
 
-        .usuario {
-            text-align: right;
-            color: #333;
-        }
+      .chat-header {
+        background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+        color: white;
+        padding: 20px;
+        text-align: center;
+        font-size: 1.3rem;
+        font-weight: bold;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+      }
 
-        .bot {
-            text-align: left;
-            color: #0077cc;
-        }
+      .chat-messages {
+        flex: 1;
+        padding: 20px;
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        background-color: #f9f9fb;
+      }
 
-        input, button {
-            padding: 10px;
-            margin-top: 1rem;
-            width: 80%;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
+      .message {
+        max-width: 80%;
+        padding: 12px 16px;
+        border-radius: 18px;
+        line-height: 1.5;
+        animation: fadeIn 0.3s ease-out;
+        font-size: 1rem;
+      }
 
-        button {
-            width: 18%;
-            background: #0077cc;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
+      .bot-message {
+        align-self: flex-start;
+        background-color: var(--bot-color);
+        color: var(--text-color);
+        border-bottom-left-radius: 5px;
+      }
 
-        button:hover {
-            background: #005fa3;
+      .user-message {
+        align-self: flex-end;
+        background-color: var(--user-color);
+        color: var(--text-color);
+        border-bottom-right-radius: 5px;
+      }
+
+      .chat-input {
+        display: flex;
+        padding: 15px;
+        gap: 10px;
+        background-color: #f1f3f5;
+        border-top: 1px solid #e0e0e0;
+        align-items: center;
+      }
+
+      #userInput {
+        flex: 1;
+        padding: 12px 16px;
+        border: none;
+        border-radius: 25px;
+        outline: none;
+        font-size: 1rem;
+        background-color: #fff;
+        box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+      }
+
+      #sendButton,
+      #trainButton {
+        background-color: var(--primary-color);
+        color: white;
+        border: none;
+        border-radius: 50px;
+        padding: 12px 18px;
+        font-size: 1rem;
+        cursor: pointer;
+        transition: background 0.3s;
+      }
+
+      #sendButton:hover,
+      #trainButton:hover {
+        background-color: var(--secondary-color);
+      }
+
+      #sendButton i {
+        font-size: 1.2rem;
+      }
+
+      .typing-indicator {
+        display: inline-block;
+        padding: 10px;
+      }
+
+      .typing-dot {
+        display: inline-block;
+        width: 8px;
+        height: 8px;
+        border-radius: 50%;
+        background-color: #aaa;
+        margin: 0 2px;
+        animation: typingAnimation 1.4s infinite ease-in-out;
+      }
+
+      .typing-dot:nth-child(1) {
+        animation-delay: 0s;
+      }
+      .typing-dot:nth-child(2) {
+        animation-delay: 0.2s;
+      }
+      .typing-dot:nth-child(3) {
+        animation-delay: 0.4s;
+      }
+
+      @keyframes typingAnimation {
+        0%, 60%, 100% {
+          transform: translateY(0);
         }
+        30% {
+          transform: translateY(-5px);
+        }
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+          transform: translateY(10px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      .chat-messages::-webkit-scrollbar {
+        width: 6px;
+      }
+
+      .chat-messages::-webkit-scrollbar-thumb {
+        background: #ccc;
+        border-radius: 3px;
+      }
     </style>
-</head>
-<body>
-    <div id="chat">
-        <div id="mensajes"></div>
-        <input type="text" id="mensajeInput" placeholder="Escribe tu mensaje...">
-        <button onclick="enviarMensaje()">Enviar</button>
+  </head>
+  <body>
+    <div class="chat-container">
+      <div class="chat-header">📚 Asistente de Lectura</div>
+      <div class="chat-messages" id="chatbox">
+        <div class="message bot-message">
+          Bienvenido a tu Tutor de Lectura Inteligente. ¿En qué te puedo ayudar?
+        </div>
+      </div>
+      <div class="chat-input">
+        <input
+          type="text"
+          id="userInput"
+          placeholder="Escribe tu mensaje..."
+          autocomplete="off"
+        />
+        <button id="sendButton" title="Enviar"><i class="fas fa-paper-plane"></i></button>
+        <button id="trainButton" onclick="entrenarDesdeJson()">Entrenar</button>
+      </div>
     </div>
 
     <script>
-        async function enviarMensaje() {
-            const input = document.getElementById("mensajeInput");
-            const texto = input.value.trim();
-            if (!texto) return;
+      document.addEventListener("DOMContentLoaded", function () {
+        const chatbox = document.getElementById("chatbox");
+        const userInput = document.getElementById("userInput");
+        const sendButton = document.getElementById("sendButton");
 
-            mostrarMensaje("Tú", texto, "usuario");
-
-            try {
-                const response = await fetch(`http://localhost:5000/ia/chat?mensaje=${encodeURIComponent(texto)}`);
-                const data = await response.json();
-
-                mostrarMensaje("Bot", data.respuesta, "bot");
-            } catch (err) {
-                mostrarMensaje("Error", "No se pudo conectar con el bot", "bot");
-            }
-
-            input.value = "";
+        function addMessage(message, isUser = false) {
+          const messageDiv = document.createElement("div");
+          messageDiv.classList.add("message", isUser ? "user-message" : "bot-message");
+          messageDiv.textContent = message;
+          chatbox.appendChild(messageDiv);
+          chatbox.scrollTop = chatbox.scrollHeight;
         }
 
-        function mostrarMensaje(remitente, texto, clase) {
-            const div = document.createElement("div");
-            div.className = `mensaje ${clase}`;
-            div.innerText = `${remitente}: ${texto}`;
-            document.getElementById("mensajes").appendChild(div);
+        function showTypingIndicator() {
+          const typingDiv = document.createElement("div");
+          typingDiv.classList.add("message", "bot-message");
+          typingDiv.id = "typingIndicator";
+          typingDiv.innerHTML = `
+            <div class="typing-indicator">
+              <span class="typing-dot"></span>
+              <span class="typing-dot"></span>
+              <span class="typing-dot"></span>
+            </div>`;
+          chatbox.appendChild(typingDiv);
+          chatbox.scrollTop = chatbox.scrollHeight;
         }
+
+        function hideTypingIndicator() {
+          const typing = document.getElementById("typingIndicator");
+          if (typing) typing.remove();
+        }
+
+        async function sendMessage() {
+          const message = userInput.value.trim();
+          if (!message) return;
+
+          addMessage(message, true);
+          userInput.value = "";
+          showTypingIndicator();
+
+          try {
+            const response = await fetch("http://127.0.0.1:5000/get_response", {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/x-www-form-urlencoded",
+              },
+              body: `message=${encodeURIComponent(message)}`,
+            });
+
+            const data = await response.json();
+            hideTypingIndicator();
+            addMessage(data.response);
+          } catch (err) {
+            hideTypingIndicator();
+            addMessage("Lo siento, hubo un error al procesar tu mensaje.");
+            console.error(err);
+          }
+        }
+
+        sendButton.addEventListener("click", sendMessage);
+        userInput.addEventListener("keypress", function (e) {
+          if (e.key === "Enter") {
+            sendMessage();
+          }
+        });
+
+        userInput.focus();
+      });
+
+      async function entrenarDesdeJson() {
+        try {
+          const response = await fetch("http://127.0.0.1:5000/train-json", {
+            method: "POST",
+          });
+          const data = await response.json();
+          alert(data.msg || data.error);
+        } catch (err) {
+          alert("Error al entrenar: " + err.message);
+        }
+      }
     </script>
-</body>
+  </body>
 </html>
